convert ipynb to slide.html

--- a/ipynb/Backup/持有iPhone比例.ipynb
+++ b/ipynb/Backup/持有iPhone比例.ipynb
@@ -95,13 +95,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -146,13 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,15 +178,6 @@
     "     scale_fill_manual(name = \"Possessing iPhone\",\n",
     "                         values = c(\"#FF8040\", \"grey\")) +\n",
     "      geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, \"%\")), size=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "管院學生使用iphone的比例為十分誇張的62.86%，而非管院則為44.08%（略高於台灣總市佔率），可見大眾對管院學生手機品牌的印象並非空穴來風。"
    ]
   },
   {
@@ -287,15 +264,6 @@
     "     scale_fill_manual(name = \"Possessing iPhone\",\n",
     "                         values = c(\"#FF8040\", \"grey\")) +\n",
     "      geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, \"%\")), size=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "以台大整體來說，男生使用iphone的比例遠低於女生。"
    ]
   },
   {
@@ -425,13 +393,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,15 +433,6 @@
     "    labs(x = \"Grade\", y = \"Rate of Having iPhone\", title = \"The possession of iPhone\") +\n",
     "    theme(plot.title = element_text(size = 24),\n",
     "          axis.title = element_text(size = 18))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "對台大學生來說，隨著系級增長，使用iphone的比例竟然也隨之增加，猜測可能是因為有更多可支配的收入來源（家教、打工、實習）"
    ]
   },
   {
@@ -796,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 檢驗管院學生參加企業競賽比例是否高於0.5\n",
+    "#### 檢驗管院學生持有iPhone比例是否高於0.5\n",
     "$H_0 : p \\leqslant 0.5\\\\H_1 : p > 0.5$\n"
    ]
   },
@@ -838,37 +790,6 @@
     "z <- (phat - p0)/sqrt(p0*(1-p0)/nrow(sample))\n",
     "pnorm(z, lower.tail = F)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://gs.statcounter.com/os-market-share/mobile/taiwan\n",
-    "\n",
-    "根據statcounter這個網站是的資料，iphone在台灣的市佔率截至2019年11月是43.26%而台大生的使用比例為47.59%略高於整體。\n",
-    "\n",
-    "管院學生使用iphone的比例為十分誇張的62.86%，而非管院則為44.08%（略高於台灣總市佔率），可見大眾對管院學生手機品牌的印象並非空穴來風。\n",
-    "\n",
-    "以台大整體來說，男生使用iphone的比例遠低於女生。\n",
-    "\n",
-    "對台大學生來說，隨著系級增長，使用iphone的比例竟然也隨之增加，猜測可能是因為有更多可支配的收入來源（家教、打工、實習）。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "在95%的信心水準下，我們發現非管院學生使用iphone的比例介於[36.19%,51.97%]之間\n",
-    "\n",
-    "在95%的信心水準下，管院學生使用iphone的比例介於[46.85%,78.86%]之間。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
