--- a/ipynb/Backup/持有信用卡比例.ipynb
+++ b/ipynb/Backup/持有信用卡比例.ipynb
@@ -9,9 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'dplyr' was built under R version 3.5.3\"\n",
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'tidyr' was built under R version 3.5.3\"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -26,7 +50,7 @@
       " $ hasSuit                       : int  0 1 0 1 0 1 1 0 1 0 ...\n",
       " $ timeToDressUp                 : int  45 35 15 5 5 5 25 15 25 15 ...\n",
       " $ cafePricePerWeek              : int  150 250 250 50 0 0 150 0 50 150 ...\n",
-      " $ mealPricePerDay               : int  150 350 350 150 150 150 150 250 250 250 ...\n",
+      " $ mealPricePerDay               : Factor w/ 6 levels \"150\",\"250\",\"350\",..: 1 3 3 1 1 1 1 2 2 2 ...\n",
       " $ hasCreditCard                 : int  1 1 1 0 0 1 0 0 1 0 ...\n",
       " $ hasAttendedBusinessCompetition: int  0 0 0 0 0 0 1 0 1 0 ...\n",
       " $ EnglishProficiency            : int  4 4 3 NA 3 5 2 3 2 5 ...\n",
@@ -181,15 +205,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "管院學生持有信用卡的比例超過一半，而非管院學生則接近45%"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,15 +288,6 @@
     "     scale_fill_manual(name = \"Possessing CreditCard\",\n",
     "                         values = c(\"#FF8040\", \"grey\")) +\n",
     "      geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, \"%\")), size=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "以台大整體來說，男生持有信用卡的比例低於女生約10個百分點。"
    ]
   },
   {
@@ -451,15 +457,6 @@
     "    labs(x = \"Grade\", y = \"Rate of Having CreditCard\", title = \"The possession of CreditCard\") +\n",
     "    theme(plot.title = element_text(size = 24),\n",
     "          axis.title = element_text(size = 18))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "隨著系級增長，持有信用卡的比例亦正向上升。"
    ]
   },
   {
@@ -817,30 +814,6 @@
     "z <- (phat - p0)/sqrt(p0*(1-p0)/nrow(sample))\n",
     "pnorm(z, lower.tail = F)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "管院學生持有信用卡的比例超過一半，而非管院學生則接近45%\n",
-    "\n",
-    "以台大整體來說，男生持有信用卡的比例低於女生約10個百分點。\n",
-    "\n",
-    "＠＠＠感覺台大女學生的生活品質比較好誒qq\n",
-    "\n",
-    "隨著系級增長，持有信用卡的比例亦正向上升。\n",
-    "\n",
-    "在95%的信心水準下，我們發現非管院學生持有信用卡的比例介於[32.83%,52.64%]之間\n",
-    "\n",
-    "在95%的信心水準下，管院學生持有信用卡的比例介於[34.87%,67.99%]之間。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
