change legend text

--- a/md檔/交換/交換.md
+++ b/md檔/交換/交換.md
@@ -22,7 +22,7 @@ observing <- data %>% group_by(exchangeAbroad)
      $ hasSuit                       : int  0 1 0 1 0 1 1 0 1 0 ...
      $ timeToDressUp                 : int  45 35 15 5 5 5 25 15 25 15 ...
      $ cafePricePerWeek              : int  150 250 250 50 0 0 150 0 50 150 ...
-     $ mealPricePerDay               : Factor w/ 6 levels "150","250","350",..: 1 3 3 1 1 1 1 2 2 2 ...
+     $ mealPricePerDay               : int  150 350 350 150 150 150 150 250 250 250 ...
      $ hasCreditCard                 : int  1 1 1 0 0 1 0 0 1 0 ...
      $ hasAttendedBusinessCompetition: int  0 0 0 0 0 0 1 0 1 0 ...
      $ EnglishProficiency            : int  4 4 3 NA 3 5 2 3 2 5 ...
@@ -45,7 +45,7 @@ options(repr.plot.width=16, repr.plot.height=8)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -62,7 +62,7 @@ sample <- observing %>% filter(school == 7)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -79,7 +79,7 @@ sample <- observing %>% filter(school != 7)
 sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -96,7 +96,7 @@ sample <- observing %>% filter(gender == 1)
 sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -113,7 +113,7 @@ sample <- observing %>% filter(gender == 2)
 sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -130,7 +130,7 @@ sample <- observing %>% filter(grade == 2)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -147,7 +147,7 @@ sample <- observing %>% filter(grade == 3)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -164,7 +164,7 @@ sample <- observing %>% filter(grade == 4)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(exchangeAbroad, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Experience of Exchanging",
+     scale_fill_manual(name = "Having plans or experience of exchanging",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -177,12 +177,12 @@ sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)-
 
 
 ```R
-options(repr.plot.width=8, repr.plot.height=8)
+options(repr.plot.width=16, repr.plot.height=8)
 observing %>% group_by(grade) %>% summarise(exchangeAbroad = sum(exchangeAbroad) ,total = n()) %>% mutate(p = exchangeAbroad / total) %>%
     ggplot(aes(x = grade, y = p)) + geom_col(fill = "#FF935C") +
     geom_text(aes( label = scales::percent(p),
                    y= p ), stat= "identity", position = position_dodge(1), size = 6) +
-    labs(x = "grade", y = "Rate of Having Experience Exchanging Abroad", title = "The Experience of Exchanging in different grade") +
+    labs(x = "grade", y = "Rate of Having Experience Exchanging Abroad", title = "The Having plans or experience of exchanging in different grade") +
     theme(plot.title = element_text(size = 24),
           axis.title = element_text(size = 18))
 ```
@@ -195,12 +195,25 @@ observing %>% group_by(grade) %>% summarise(exchangeAbroad = sum(exchangeAbroad)
 
 
 ```R
-options(repr.plot.width=8, repr.plot.height=8)
-observing %>% group_by(school) %>% summarise(exchangeAbroad = sum(exchangeAbroad) ,total = n()) %>% mutate(p = exchangeAbroad / total) %>%
+options(repr.plot.width=16, repr.plot.height=8)
+
+ob2 <- observing
+ob2$school[ob2$school == 1] = "文學院"
+ob2$school[ob2$school == 2] = "理學院"
+ob2$school[ob2$school == 3] = "社科院"
+ob2$school[ob2$school == 4] = "醫學院"
+ob2$school[ob2$school == 5] = "工學院"
+ob2$school[ob2$school == 6] = "生農學院"
+ob2$school[ob2$school == 7] = "管理學院"
+ob2$school[ob2$school == 8] = "公衛學院"
+ob2$school[ob2$school == 9] = "電資學院"
+ob2$school[ob2$school == 10] = "法律學院"
+ob2$school[ob2$school == 11] = "生科院"
+ob2  %>% group_by(school) %>% summarise(exchangeAbroad = sum(exchangeAbroad) ,total = n()) %>% mutate(p = exchangeAbroad / total) %>%
     ggplot(aes(x = factor(school), y = p)) + geom_col(fill = "#FF935C") +
     geom_text(aes( label = scales::percent(p),
                    y= p ), stat= "identity", position = position_dodge(1), size = 6) +
-    labs(x = "school", y = "Rate of Having Experience Exchanging Abroad", title = "The Experience of Exchanging in different school") +
+    labs(x = "school", y = "Rate of Having Experience Exchanging Abroad", title = "The Having plans or experience of exchanging in different school") +
     theme(plot.title = element_text(size = 24),
           axis.title = element_text(size = 18))
 ```
