--- a/md檔/參加企業競賽/參加企業競賽.md
+++ b/md檔/參加企業競賽/參加企業競賽.md
@@ -22,7 +22,7 @@ observing <- data %>% group_by(hasAttendedBusinessCompetition)
      $ hasSuit                       : int  0 1 0 1 0 1 1 0 1 0 ...
      $ timeToDressUp                 : int  45 35 15 5 5 5 25 15 25 15 ...
      $ cafePricePerWeek              : int  150 250 250 50 0 0 150 0 50 150 ...
-     $ mealPricePerDay               : Factor w/ 6 levels "150","250","350",..: 1 3 3 1 1 1 1 2 2 2 ...
+     $ mealPricePerDay               : int  150 350 350 150 150 150 150 250 250 250 ...
      $ hasCreditCard                 : int  1 1 1 0 0 1 0 0 1 0 ...
      $ hasAttendedBusinessCompetition: int  0 0 0 0 0 0 1 0 1 0 ...
      $ EnglishProficiency            : int  4 4 3 NA 3 5 2 3 2 5 ...
@@ -45,7 +45,7 @@ options(repr.plot.width=16, repr.plot.height=8)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -62,7 +62,7 @@ sample <- observing %>% filter(school == 7)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -79,7 +79,7 @@ sample <- observing %>% filter(school != 7)
 sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -88,10 +88,7 @@ sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)
 ![png](output_7_0.png)
 
 
-
-```R
 企業競賽本就是比賽商管方面的知識和才能，所以管院參加比例較高並不意外。
-```
 
 ## 男性
 
@@ -101,14 +98,10 @@ sample <- observing %>% filter(gender == 1)
 sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
-
-
-![png](output_10_0.png)
-
 
 ## 女性
 
@@ -118,7 +111,7 @@ sample <- observing %>% filter(gender == 2)
 sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -127,10 +120,7 @@ sample %>% summarise(n = n(), p = n()/ nrow(sample))  %>% mutate(pos = cumsum(p)
 ![png](output_12_0.png)
 
 
-
-```R
 整體來說，有參加企業競賽經驗的同學都偏少，其中女生比男生在比例上高一點。
-```
 
 ## 大二學生
 
@@ -140,7 +130,7 @@ sample <- observing %>% filter(grade == 2)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -157,7 +147,7 @@ sample <- observing %>% filter(grade == 3)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -174,7 +164,7 @@ sample <- observing %>% filter(grade == 4)
 sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)- p/2) %>% 
     ggplot(aes(x = "", y = p, fill = factor(hasAttendedBusinessCompetition, levels = c(T, F)))) +
     geom_bar(width = 1, stat = "identity") + coord_polar("y", start=0) +
-     scale_fill_manual(name = "Business Competition Experience",
+     scale_fill_manual(name = "Having participated in some business contest",
                          values = c("#FF8040", "grey")) +
       geom_text(aes(x= 1.2, y=pos, label = paste(round(p, 4)*100, "%")), size=7)
 ```
@@ -187,7 +177,7 @@ sample %>% summarise(n = n(), p = n()/ nrow(sample)) %>% mutate(pos = cumsum(p)-
 
 
 ```R
-options(repr.plot.width=8, repr.plot.height=8)
+options(repr.plot.width=16, repr.plot.height=8)
 observing %>% group_by(grade) %>% summarise(hasAttendedBusinessCompetition = sum(hasAttendedBusinessCompetition) ,total = n()) %>% mutate(p = hasAttendedBusinessCompetition / total) %>%
     ggplot(aes(x = grade, y = p)) + geom_col(fill = "#FF935C") +
     geom_text(aes( label = scales::percent(p),
@@ -201,17 +191,26 @@ observing %>% group_by(grade) %>% summarise(hasAttendedBusinessCompetition = sum
 ![png](output_21_0.png)
 
 
-
-```R
 隨著系級增長，參加企業競賽的比例小幅上升。
-```
 
 ## 按學院比較
 
 
 ```R
-options(repr.plot.width=8, repr.plot.height=8)
-observing %>% group_by(school) %>% summarise(hasAttendedBusinessCompetition = sum(hasAttendedBusinessCompetition) ,total = n()) %>% mutate(p = hasAttendedBusinessCompetition / total) %>%
+options(repr.plot.width=16, repr.plot.height=8)
+ob2 <- observing
+ob2$school[ob2$school == 1] = "文學院"
+ob2$school[ob2$school == 2] = "理學院"
+ob2$school[ob2$school == 3] = "社科院"
+ob2$school[ob2$school == 4] = "醫學院"
+ob2$school[ob2$school == 5] = "工學院"
+ob2$school[ob2$school == 6] = "生農學院"
+ob2$school[ob2$school == 7] = "管理學院"
+ob2$school[ob2$school == 8] = "公衛學院"
+ob2$school[ob2$school == 9] = "電資學院"
+ob2$school[ob2$school == 10] = "法律學院"
+ob2$school[ob2$school == 11] = "生科院"
+ob2 %>% group_by(school) %>% summarise(hasAttendedBusinessCompetition = sum(hasAttendedBusinessCompetition) ,total = n()) %>% mutate(p = hasAttendedBusinessCompetition / total) %>%
     ggplot(aes(x = factor(school), y = p)) + geom_col(fill = "#FF935C") +
     geom_text(aes( label = scales::percent(p),
                    y= p ), stat= "identity", position = position_dodge(1), size = 6) +
@@ -275,7 +274,7 @@ pnorm(z, lower.tail = T)
 ```
 
 
-0.00348261238353966
+7.14286502106959e-06
 
 
 # 管院學生參加企業競賽 之信賴區間
