gpa hypothesis test change

--- a/ipynb/GPa分布.ipynb
+++ b/ipynb/GPa分布.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +119,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 檢驗管院學生GPa是否低於3.73\n",
-    "$H_0 : p \\geqslant 3.73\\\\H_1 : p < 3.73$\n",
+    "#### 檢驗管院學生GPa是否高於3.73\n",
+    "$H_0 : p \\leqslant 3.73\\\\H_1 : p > 3.73$\n",
     "<br/><br/>\n",
     "註:在假設資料接近t分配之下進行檢定\n",
     "#### p-value"
@@ -128,22 +128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "3.63171052631579"
+       "3.61685714285714"
       ],
       "text/latex": [
-       "3.63171052631579"
+       "3.61685714285714"
       ],
       "text/markdown": [
-       "3.63171052631579"
+       "3.61685714285714"
       ],
       "text/plain": [
-       "[1] 3.631711"
+       "[1] 3.616857"
       ]
      },
      "metadata": {},
@@ -152,16 +152,16 @@
     {
      "data": {
       "text/html": [
-       "0.0932815897195471"
+       "0.951830747489718"
       ],
       "text/latex": [
-       "0.0932815897195471"
+       "0.951830747489718"
       ],
       "text/markdown": [
-       "0.0932815897195471"
+       "0.951830747489718"
       ],
       "text/plain": [
-       "[1] 0.09328159"
+       "[1] 0.9518307"
       ]
      },
      "metadata": {},
@@ -172,7 +172,7 @@
     "phat <- mean(sample[,\"GPA\"])\n",
     "phat\n",
     "df <- 34\n",
-    "pt((phat-3.73)/sd(sample[,\"GPA\"])*sqrt(35), df, lower.tail = T)"
+    "pt((phat-3.73)/sd(sample[,\"GPA\"])*sqrt(35), df, lower.tail = F)"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,11 +303,6 @@
     "(所以其他學院的孩子不要在嘴我們GPA高了好嗎 你們也不差呢)<br/>\n",
     "<br/>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
